-details  open attribute add

--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -60,7 +60,7 @@
                      <dd>description 2</dd>
                   </dl>
                   <h2>Details</h2>
-                  <details>
+                  <details open>
                      <summary>Even more details open</summary>
                      <p>Here are even more details about the details.</p>
                   </details>
