abbr: fix double line

--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -92,7 +92,7 @@
                                 <td><del>delete</del></td>
                             </tr>
                             <tr>
-                                <td><abbr title="Abbreviation">Abbreviation</abbr></td>
+                                <td><abbr>Abbreviation</abbr></td>
                                 <td>5<sup>3</sup> = 125</td>
                                 <td><ins>inserted</ins></td>
                             </tr>
