+add tag with hidden attribute (second variant)

--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -17,7 +17,11 @@
                             <img src="EPAM_logo.svg" alt="EPAM_logo" title="Go to www.epam.com" />
                         </a>
                         <nav>
-                            <a href="#html"><strong>HTML</strong></a><a href="#list"><strong>List</strong></a><a href="#table"><strong>Table</strong></a><a href="#text_formats"><strong>Text formats</strong></a><a href="#blockquotes"><strong>Blockquotes</strong></a>
+                            <a href="#html"><strong>HTML</strong></a>
+                            <a href="#list"><strong>List</strong></a>
+                            <a href="#table"><strong>Table</strong></a>
+                            <a href="#text_formats"><strong>Text formats</strong></a>
+                            <a href="#blockquotes"><strong>Blockquotes</strong></a>
                             <hr/>
                         </nav>
                     </header>
@@ -131,6 +135,7 @@ both           spaces and
                         Technology is nothing. What's important is that you have a faith in people, that they're basically good and smart, and if you give them tools, they'll do wonderful things with them.
                         <br/><a href="https://en.wikipedia.org/wiki/Steve_Jobs" title="And here’s a bit of trailing text.">Steve Jobs</a>
                     </blockquote>
+                    <p hidden="true">And here’s a bit of trailing text.</p>
                     <!-- TODO: Content goes here -->
                     <footer>Copyright Epam Systems</footer>
                 </div>
