fix hidden validator error

--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -135,7 +135,7 @@ both           spaces and
                         Technology is nothing. What's important is that you have a faith in people, that they're basically good and smart, and if you give them tools, they'll do wonderful things with them.
                         <br/><a href="https://en.wikipedia.org/wiki/Steve_Jobs" title="And here’s a bit of trailing text.">Steve Jobs</a>
                     </blockquote>
-                    <p hidden="true">And here’s a bit of trailing text.</p>
+                    <p hidden>And here’s a bit of trailing text.</p>
                     <!-- TODO: Content goes here -->
                     <footer>Copyright Epam Systems</footer>
                 </div>
