fix validation errors
textarea > type error
form > action error

--- a/homework_03/index.html
+++ b/homework_03/index.html
@@ -85,7 +85,7 @@
         <div>
             <!--TODO write form fields-->
             <h2>Залишити відгук</h2>
-            <form action="">
+            <form>
                 <div class="column">
                     <span>ІМ'Я</span><br>
                     <input class="cell_width" type="text" name="firstname" value="Введіть ім`я" required><br>
@@ -97,7 +97,7 @@
                 <span>ОЦІНІТЬ</span><br>
                 <input class="cell_width" type="text" name="raring" required> <br>
                 <span>НАПИШІТЬ ВІДГУК</span><br>
-                <textarea class="cell_width" type="text" name="comment">Залишити відгук</textarea>
+                <textarea class="cell_width" name="comment">Залишити відгук</textarea>
                 <div class="oversbutton">
                     <input id="button" type="button" value="НАДІСЛАТИ">
                 </div>
