--- a/homework_04/index.html
+++ b/homework_04/index.html
@@ -26,9 +26,15 @@
                 </menu>
             </div>
             <div class="flex-title-container">
-                <h1>BLACK <span class="amp">&amp;</span> WHITE<span class="sup">TM</span></h1>
-                <p>An Original Brand Since 1965</p>
-                <button>Read More</button>
+               <div>
+                   <h1>BLACK <span class="amp">&amp;</span> WHITE<span class="sup">TM</span></h1>
+               </div>
+                <div>
+                  <p>An Original Brand Since 1965</p>  
+                </div>
+                <div>
+                    <button>Read More</button>
+                </div>
             </div>
         </header>
 
@@ -80,20 +86,20 @@
 
         <footer>
             <div class="flex-footer">
-                <div>
-                    <p>Black &amp; White <br> consequuntur magni dolores atione voluptatem sequi nesc ue porro quisquam est, qui d sum quia dolor sit amet, cons sum quia sum quia</p>
+                <div class="box1">
+                    <p> <span class="title">Black &amp; White</span><br> consequuntur magni dolores atione voluptatem sequi nesc ue porro quisquam est, qui d sum quia dolor sit amet, cons sum quia sum quia</p>
                 </div>
 
-                <div>
-                    <p>Contact <br> www.loremipsumdolar.nl 182 AB Your Street Name e-mail@loremipsum.com +(121)01 23 45 679</p>
+                <div class="box2">
+                    <p><span class="title">Contact</span><br> www.loremipsumdolar.nl 182 AB Your Street Name e-mail@loremipsum.com +(121)01 23 45 679</p>
                 </div>
 
-                <div>
-                    <p>Latest Tweet <br> "...aerat vluptatem. Ut eni et illi dolare magnam aliqua et aerat voluptatem. Utils eni tils et al is minima veniam." 3 hours ago</p>
+                <div class="box3">
+                    <p><span class="title">Latest Tweet</span><br> "...aerat vluptatem. Ut eni et illi dolare magnam aliqua et aerat voluptatem. Utils eni tils et al is minima veniam." 3 hours ago</p>
                 </div>
 
-                <div>
-                    <p>Newsletter <br> Neque porro quisquam eist, im ipsum quia dolor sit amettur, adipisci velit,</p>
+                <div class="box4">
+                    <p><span class="title">Newsletter</span><br> Neque porro quisquam eist, im ipsum quia dolor sit amettur, adipisci velit,</p>
                     <div class="form">
                         <input type="text" value="E-mail address">
                         <button>Subscribe</button>
