Test 3 (Evening commit)
+responsible design (min 900px)
-gallery not working

--- a/homework_04/index.html
+++ b/homework_04/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Epam Front End Lab. Preprocessors</title>
+    <title>BLACK &amp; WHITE</title>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -26,13 +26,15 @@
                 </menu>
             </div>
             <div class="flex-title-container">
-               <div>
-                   <h1>BLACK <span class="amp">&amp;</span> WHITE<span class="sup">TM</span></h1>
-               </div>
-                <div>
-                  <p>An Original Brand Since 1965</p>  
+                <div class="main-title">
+                    <div>
+                        <h1>BLACK <span class="amp">&amp;</span> WHITE<span class="sup">TM</span></h1>
+                    </div>
+                    <div>
+                        <p>An Original Brand Since 1965</p>
+                    </div>
                 </div>
-                <div>
+                <div class="main-button">
                     <button>Read More</button>
                 </div>
             </div>
@@ -40,11 +42,13 @@
 
 
         <div class="flex-under-header-container">
-            <div class="left">
-                <p>Lorem ipsum dolor, consectuer adipiscing. Aenean <b>commodo ligula</b> eget dolor.</p>
-            </div>
-            <div class="right">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+            <div class="flex-under-header">
+                <div class="left">
+                    <p>Lorem ipsum dolor, consectuer adipiscing. Aenean <b>commodo ligula</b> eget dolor.</p>
+                </div>
+                <div class="right">
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+                </div>
             </div>
         </div>
 
@@ -70,14 +74,15 @@
                 </div>
             </div>
 
-
-            <div class="subscribe">
-                <div class="subscribe-newsletter">
-                    <p>Subscribe to our <b>newsletter</b> </p>
-                </div>
-                <div class="form">
-                    <input type="text" value="Enter your e-mail address">
-                    <button class="subscribe-button">Subscribe</button>
+            <div class="subscribe-container">
+                <div class="subscribe">
+                    <div class="subscribe-newsletter">
+                        <p>Subscribe to our <b>newsletter</b> </p>
+                    </div>
+                    <div class="form">
+                        <input type="text" value="Enter your e-mail address">
+                        <button class="subscribe-button">Subscribe</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -85,28 +90,30 @@
 
 
         <footer>
-            <div class="flex-footer">
-                <div class="box1">
-                    <p> <span class="title">Black &amp; White</span><br> consequuntur magni dolores atione voluptatem sequi nesc ue porro quisquam est, qui d sum quia dolor sit amet, cons sum quia sum quia</p>
-                </div>
+            <div class="flex-footer-container">
+                <div class="flex-footer">
+                    <div class="box1">
+                        <p> <span class="title">Black &amp; White</span><br> consequuntur magni dolores atione voluptatem sequi nesc ue porro quisquam est, qui d sum quia dolor sit amet, cons sum quia sum quia</p>
+                    </div>
 
-                <div class="box2">
-                    <p><span class="title">Contact</span><br> www.loremipsumdolar.nl 182 AB Your Street Name e-mail@loremipsum.com +(121)01 23 45 679</p>
-                </div>
+                    <div class="box2">
+                        <p><span class="title">Contact</span><br> www.loremipsumdolar.nl 182 AB Your Street Name e-mail@loremipsum.com +(121) 01 23 45 679</p>
+                    </div>
 
-                <div class="box3">
-                    <p><span class="title">Latest Tweet</span><br> "...aerat vluptatem. Ut eni et illi dolare magnam aliqua et aerat voluptatem. Utils eni tils et al is minima veniam." 3 hours ago</p>
-                </div>
+                    <div class="box3">
+                        <p><span class="title">Latest Tweet</span><br> <i>"...aerat vluptatem. Ut eni et illi dolare magnam aliqua et aerat voluptatem. Utils eni tils et al is minima veniam."</i><br><br><span class="time">3 hours ago</span></p>
+                    </div>
 
-                <div class="box4">
-                    <p><span class="title">Newsletter</span><br> Neque porro quisquam eist, im ipsum quia dolor sit amettur, adipisci velit,</p>
-                    <div class="form">
-                        <input type="text" value="E-mail address">
-                        <button>Subscribe</button>
+                    <div class="box4">
+                        <p><span class="title">Newsletter</span><br> Neque porro quisquam eist, im ipsum quia dolor sit amettur, adipisci velit,</p><br>
+                        <div class="form">
+                            <input type="text" value="E-mail address">
+                            <button>Subscribe</button>
+                        </div>
                     </div>
                 </div>
             </div>
-            
+
             <div class="flex-bottom-container">
                 <div class="logo">
                     <div><a href="">&copy; 2015 Ruben Stom.</a></div>
