fix  index.html issues beautify css

--- a/homework_04/index.html
+++ b/homework_04/index.html
@@ -18,12 +18,12 @@
                 <div class="logo">
                     <div><a href="#home">BLACK &amp; WHITE</a></div>
                 </div>
-                <menu>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#shop">Shop</a></li>
-                    <li><a href="#vacancies">Vacancies</a></li>
-                </menu>
+                <div class="menu">
+                    <a href="#home">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#shop">Shop</a>
+                    <a href="#vacancies">Vacancies</a>
+                </div>
             </div>
             <div class="flex-title-container">
                 <div class="main-title">
@@ -58,8 +58,8 @@
             <div class="gallery">
                 <div class="flex-row-1">
                     <div>
-                            <button>172 &hearts;</button>
-                            <p>January `15 South France</p>
+                        <button>172 &hearts;</button>
+                        <p>January `15 South France</p>
                     </div>
                     <div>
                         <button>112 &hearts;</button>
@@ -126,10 +126,10 @@
                     <div><a href="#home">&copy; 2015 Ruben Stom.</a></div>
                 </div>
                 <div class="bottom-menu">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#shop">Shop</a></li>
-                    <li><a href="#vacancies">Vacancies</a></li>
+                    <a href="#home">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#shop">Shop</a>
+                    <a href="#vacancies">Vacancies</a>
                 </div>
             </div>
         </footer>
