add tablet and desktop versions fix image-padding

--- a/homework_05/index.html
+++ b/homework_05/index.html
@@ -22,7 +22,7 @@
 
         <div class="banner">
             <div>
-                <b>Epam helps moneysupermarket deliver engaging digital experiences</b>
+                Epam helps moneysupermarket deliver engaging digital experiences
             </div>
         </div>
 
